MC818-Fix side trowser on small breakpoint. It was not closing all the way offthe screen.

--- a/ui/reuse/client/src/components/sideTrowserBase/sideTrowserBase.scss
+++ b/ui/reuse/client/src/components/sideTrowserBase/sideTrowserBase.scss
@@ -12,6 +12,7 @@
 .sideTrowserBase {
     height: 100%;
     width: 100%;
+    position: relative;
 
     &:not(.sideTrowserDocked) > .sideTrowserContent.sideTrowserOpen {
         @include menuShadow;
@@ -40,9 +41,8 @@
         position: absolute;
         top: 0;
 
-        padding: $spacing-small;
         overflow: auto;
-        background-color: $color-black-300;
+        background-color: $leftnav-background-color;
         z-index: 100;
         height: 100vh; // Ensures that long content can be scrolled on all browsers
 
@@ -60,6 +60,10 @@
 
             // Hide menu by default
             @include moveMenuToRight;
+            // On small breakpoint the menu should be all the way off the screen, but the width is dependent on the specific device size
+            @include small-breakpoint {
+                transform: translateX(-100%);
+            }
 
             &.sideTrowserOpen {
                 transform: translateX(0);
@@ -73,6 +77,10 @@
 
             // Hide menu by default
             @include moveMenuToLeft;
+            // On small breakpoint the menu should be all the way off the screen, but the width is dependent on the specific device size
+            @include small-breakpoint {
+                transform: translateX(100%);
+            }
 
             &.sideTrowserOpen {
                 transform: translateX(0);
